# GadgetReader

./: .gitignore  .gitmodules  .travis.yml  Convert2HDF5.cpp  Doxyfile  Makefile  PGIIhead.cpp  PGIIhead_out.txt  PGIItest.sh  PosDump.cpp  README  btest.cpp  gadgetheader.h  gadgetreader.cpp  gadgetreader.hpp  gadgetreader.i  gadgetwritebigfile.cpp  gadgetwritebigfile.hpp  gadgetwritefile.hpp  gadgetwritehdf.cpp  gadgetwriteoldgadget.cpp  gadgetwriter.cpp  gadgetwriter.hpp  hdf5head.py  meson.build  read_utils.c  read_utils.h  test.cpp  test_g2_snap.0  test_g2_snap.1  type_map.h
